--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
+<app-header *ngIf="isAuthenticated"></app-header>
 <router-outlet> </router-outlet>
+<app-footer *ngIf="isAuthenticated"></app-footer>
