--- a/src/app/home/pipe-view/pipe-view.component.html
+++ b/src/app/home/pipe-view/pipe-view.component.html
@@ -27,7 +27,7 @@
     
     
     <h2>Custom Pipes</h2>
-    <p> CPF with number: {{ cpfTransformerd }} </p>
-    <p> CPF pipe on DOM: {{ cpf | onlyNumber }} </p>
+    <p> Pipe only Number: {{ cpfTransformerd }} </p>
+    <p> Pipe only number on DOM: {{ cpf | onlyNumber }} </p>
     <p> Power Calculation (2^5): {{ 2 | power: 5 }} </p>
 </app-section>
