--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,1 +1,10 @@
-<p>footer works!</p>
+<!-- Footer -->
+<footer class="page-footer font-small bg-dark fixed-bottom">
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2020 Copyright:
+        <a href="https://github.com/adrianlemess"> Adrian Lemes</a>
+    </div>
+    <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
